--- a/donation-merchant/pom.xml
+++ b/donation-merchant/pom.xml
@@ -8,9 +8,10 @@
 	<name>donation-merchant</name>
 
 	<parent>
-		<groupId>com.sk.sample</groupId>
-		<artifactId>mall</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.20.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	
 	<properties>
